2006-06-07  Reiner Steib  <Reiner.Steib@gmx.de>

	* auctex.spec: Add "-n" for preview-tetex.
	(%install): Create preview.cfg.

2006-06-07  David Kastrup  <dak@gnu.org>

	* RELEASE: Add info about preview RPM.

	* doc/install.texi (Advice for package providers): Adapt package
	advice to what we actually do for RPM files.

	* auctex.spec: attempt to add preview-tetex package.

2006-06-07  Reiner Steib  <Reiner.Steib@gmx.de>

	* Makefile.in (XEMACS_BUILD_DIR): New variable.
	(xemacs-package): Use it.
	(tar-ball-clean): Add XEMACS_BUILD_DIR.
	(CP): New variable.
	(tar-ball, www-doc): Use it.

	* RELEASE: Update RPM stuff.

	* tex.el (TeX-line-number-at-pos): New compatibility function.

	* style/pdfsync.el (LaTeX-pdfsync-output-page): Use it.

	* auctex.spec (Obsoletes): Remove preview-latex-common.

2006-06-06  Ralf Angeli  <angeli@caeruleus.net>

	* style/pdfsync.el (LaTeX-pdfsync-output-page): Initialize
	`sync-record' with a non-nil value.

	* doc/auctex.texi (Viewing): Fix reference to Commands node
	looking ugly in info output.  Slightly rearrange forward/inverse
	search section.  Document pdfsync support a bit more in detail.

2006-06-06  Reiner Steib  <Reiner.Steib@gmx.de>

	* RELEASE: Use "SUSE" instead of "SuSE".

	* auctex.spec (Release): Bump to 1.
	(%changelog): Add 11.83.

	* doc/changes.texi: Add @xref for pdfsync.

	* doc/auctex.texi (Viewing): Mention pdfsync.

	* doc/todo.texi (Wishlist): Add newline.  Mention pdfsync.

2006-06-06  David Kastrup  <dak@gnu.org>

	* RELEASE: Add details about downloadable packages.  Beg harder.

2006-06-05  Reiner Steib  <Reiner.Steib@gmx.de>

	* RELEASE: Mention LaTeX tool bar.

2006-06-05  Ralf Angeli  <angeli@caeruleus.net>

	* font-latex.el (font-latex-quote-regexp-beg)
	(font-latex-quotes-control): Make buffer-local.
	(font-latex-add-quotes): Revert last change and do not make
	`font-latex-quotes-control' buffer-local which it now already is.

2006-06-04  Ralf Angeli  <angeli@caeruleus.net>
